[package]
name = "bernardo"
version = "0.1.0"
authors = ["Andrzej J Skalski <gitstuff@s5i.ch>"]
edition = "2021"
license = "GPLv3"

[dependencies]
async-trait = "0.1.57"
arboard = "2.1.0"
cargo_toml = "0.11.5" # we need to go deeper.
clap = { version = "3.0", features = ["derive"] }
clap-verbosity-flag = "0.4.1"
crossterm = "0.23.0"
crossbeam-channel = "0.5.1"
dirs = "4.0.0"
either = "1.6.1"
env_logger = "0.9.0"
filesystem = "0.4.4"
futures = "0.3.23"
hex = "0.4.3"
ignore = "0.4.18"
json = "0.12.4"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
lazy_static = "1.4.0"
lsp-types = "0.93.0"
log = "0.4.14"
maplit = "1.0.2"
matches = "0.1.9"
num = "0.4.0"
regex = "1.5.6"
ron = "0.7.0"
ropey = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
simsearch = "0.2.3"
syntect = "4.6.0"
streaming-iterator = "0.1.5"
tree-sitter = "0.20.2"
tree-sitter-c = "0.20.1"
tree-sitter-cpp = "0.20.0"
tree-sitter-elm = "5.5.1"
tree-sitter-go = "0.19.1"
tree-sitter-html = "0.19.0"
tree-sitter-rust = "0.20.1"
tokio = { version = "1.19", features = ["full"] }
unicode-segmentation = "1.6.0"
unicode-width = "0.1.8"
url = "2.2.2"
which = "4.2.5"

[profile.dev]
opt-level = 0
debug = 2
lto = false

[profile.release]
#uncomment for profiling
#debug = true


#https://github.com/tree-sitter/tree-sitter/tree/master/lib/binding_rust
[build-dependencies]
cc = { version = "*", features = ["parallel"] }