[package]
name = "bernardo"
version = "0.2.0"
authors = ["Andrzej J Skalski <gitstuff@s5i.ch>"]
edition = "2021"
license = "GPLv3"
autobins = true
default-run = "gladius"

[lib]
name = "bernardo"

[dependencies]
#async-trait = "0.1.57"
arbitrary = { version = "1", optional = true, features = ["derive"] }
arboard = "3.1.1"
cargo_toml = "0.15.1" # we need to go deeper.
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.26.0"
crossbeam-channel = "0.5.1"
dirs = "4.0.0"
either = "1.8.1"
flexi_logger = "0.28.0"
hex = "0.4.3"
ignore = "0.4.18"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
lsp-types = "0.95.1"
log = "0.4.14"
maplit = "1.0.2"
matches = "0.1.9"
parking_lot = "0.12"
regex = "1.8.3"
ron = "0.8.0"
ropey = "1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
syntect = { version = "5.2.0", default-features = false, features = ["default-themes"] }
streaming-iterator = "0.1.9"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
tree-sitter-cpp = "0.20.4"
tree-sitter-elm = "5.7.0"
tree-sitter-go = "0.20.0"
tree-sitter-html = "0.20.0"
tree-sitter-rust = "0.20.4"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.8"
url = "2.2.2"
uuid = { version = "1.3.0", features = ["arbitrary", "v4"] }
# upgrading to 6 breaks.
which = { version = "5.0.0" }
coredump = "0.1.1"

[dev-dependencies]
rusty-fork = "0.3.0"

[profile.dev]
opt-level = 0
debug = true
lto = false
#features = ["test"]

[profile.release]
#uncomment for profiling
debug = true

#https://github.com/tree-sitter/tree-sitter/tree/master/lib/binding_rust
[build-dependencies]
cc = { version = "*", features = ["parallel"] }
