[package]
name = "bernardo"
version = "0.2.1"
authors = ["Andrzej J Skalski <gitstuff@s5i.ch>"]
edition = "2021"
license = "GPLv3"
autobins = true
default-run = "gladius"

[lib]
name = "bernardo"

[features]
fuzztest = []
arbitrary = []

[dependencies]
arboard = "3.1.1"
cargo_toml = "0.15.1" # we need to go deeper.
clap = { version = "4.1.4", features = ["derive"] }

crossbeam-channel = "0.5.14"
dirs = "4.0.0"
flexi_logger = "0.28.0"
hex = "0.4.3"
ignore = "0.4.18"
jsonrpc-core = "18.0.0"
lazy_static = "1.4.0"
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
lsp-types = "0.95.1"
log = "0.4.14"
maplit = "1.0.2"
matches = "0.1.9"
parking_lot = "0.12"
regex = "1.8.3"
ron = "0.8.0"
ropey = "1.6.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
smallvec = "1.13.2"
streaming-iterator = "0.1.9"
syntect = { version = "5.2.0", default-features = false, features = ["default-themes", "plist-load"] }
thiserror = "1.0.65"
tree-sitter = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-toml-ng = "0.6"
tree-sitter-typescript = "0.23"
unicode-segmentation = "1.12.0"
unicode-width = "0.1.8"
url = "2.2.2"
uuid = { version = "1.3.0", features = ["arbitrary", "v4"] }
# upgrading to 6 breaks.
which = { version = "5.0.0" }
coredump = "0.1.1"


[dependencies.crossterm]
version = "0.28.1"
features = ["events", "bracketed-paste"]
default-features = false

[dependencies.arbitrary]
version = "1.4"
features = ["derive", "derive_arbitrary"]
default-features = true

[dev-dependencies]
rusty-fork = "0.3.0"

[profile.dev]
opt-level = 0
debug = true
lto = false
features = ["test", "fuzztest"]

[profile.release]
opt-level = 3
lto = true
overflow-checks = false

#https://github.com/tree-sitter/tree-sitter/tree/master/lib/binding_rust
[build-dependencies]
cc = { version = "1.2.10", features = ["parallel"] }
