[package]
name = "bernardo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.bernardo]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "cem_and_buf"
path = "fuzz_targets/common_edit_messages_and_buffers.rs"
test = false
doc = false

[[bin]]
name = "fuzz_editor"
path = "fuzz_targets/fuzz_editor.rs"
test = true
doc = false
